crates/rome_service/src/configuration/snapshots/deserialization_error.snap
---
source: crates/rome_service/src/configuration/diagnostics.rs
expression: content
---
rome.json:3:13 configuration  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Rome couldn't load the configuration file, here's why: 
    expected `:` at line 3 column 13
  
    1 │ {·
    2 │ 
  > 3 │ "formatter" }
      │             
  


