crates/rome_service/src/configuration/snapshots/incorrect_pattern.snap
---
source: crates/rome_service/src/configuration/diagnostics.rs
expression: content
---
rome.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Couldn't parse the pattern *******, reason: wildcards are either regular `*` or recursive `**`
  


