crates/rome_service/src/configuration/snapshots/unknown_rule.snap
---
source: crates/rome_service/src/configuration/diagnostics.rs
expression: content
---
rome.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid rule name `foo_bar`
  


